<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="3"
            android:scaleType="fitXY"
            android:src="@drawable/background"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="5dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/registerLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline">


            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/registerTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/signInTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/create_your_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTxt" />

            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/your_nameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_44sdp"
                android:text="@string/your_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInTxt" />

            <com.room_db_nandhakumar.taskroomdb.widget.CustomEditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/login_edittext_background"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress|textNoSuggestions|textFilter"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/edittext_hint_color"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/your_nameTxt"
                app:layout_constraintTop_toBottomOf="@+id/your_nameTxt" />


            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/your_emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <com.room_db_nandhakumar.taskroomdb.widget.CustomEditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="@drawable/login_edittext_background"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress|textNoSuggestions|textFilter"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/edittext_hint_color"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/your_emailTxt"
                app:layout_constraintTop_toBottomOf="@+id/your_emailTxt" />



            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/passwordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <com.room_db_nandhakumar.taskroomdb.widget.CustomEditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/login_edittext_background"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/edittext_hint_color"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/your_emailTxt"
                app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />


            <ImageView
                android:id="@+id/showPassword"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/hide_pwd"
                app:layout_constraintBottom_toBottomOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintTop_toTopOf="@+id/password" />


            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/login_already"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="@+id/your_emailTxt"
                app:layout_constraintStart_toStartOf="@+id/your_emailTxt"
                app:layout_constraintTop_toBottomOf="@+id/password" />


            <com.room_db_nandhakumar.taskroomdb.widget.CustomTextView
                android:id="@+id/regBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_button"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>